[package]
name = "simple_kzg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pairing = "*"
thiserror = "*"
rand = { version = "*", optional = true }
serde = { version = "*", optional = true, features = ["derive"] }
blstrs = "*"
rayon = { version = "*", optional = true}

[dev-dependencies]
lazy_static = "1.4.0"
criterion = "0.3"
pprof = { version = "0.6", features = ["flamegraph"] }
bincode = "1.3.3"